Changes for 1.7
* Created a notification to the user when they start TripleA that checks if their TripleA is the latest version, and if not asks them to update it. (veqryn)

* Created a notification to the user when they click "list games" that will alert them to which maps they already have which may be out of date and need updating. (veqryn)

* Added the default map downloader xml web link to the download maps feature, if the user does not already have any. (veqryn)

* Fixed movement validation bug that prevent loading of land units onto a transport during noncombat if the transport was in an enemy 'owned' sea zone. (veqryn)

* Fixed bug where units being transported or otherwise dependent were being counted towards unit presence and unit exclusion objectives. (veqryn)

* Changing territory attachment "occupiedTerrOf" into "originalOwner". (veqryn)

* Deleting game option property "Occupied Territories" since it does not do anything anymore. (veqryn)

* Created new territory effect attachment option, "unitsNotAllowed", which is a list of units that will be prevented from moving into any territories with this effect. (crystalct) 

* Adding ability to specify which round the game starts on, through a round offset in gameplay section of xml. (veqryn)

* Added ability to Right Click on any node in the History panel, and save a game at that point in history [could still be buggy, do not use for tournament games]. (veqryn)

* Abstracted delegates so that the server can now determine if it needs to wait on the user for input for a delegate or not. (veqryn)

* Fixed bug where having a tech token but not having enough money to buy a new one, would cause you to skip rolling for the existing token. (veqryn)


Changes for 1.6.1.4
* Adding dotted lines to the LOTR Middle Earth map, to show connections over rivers. (veqryn)

* Not showing tech in stats panel if game xml does not have any technologies. (veqryn)
